# cfn-sync

./: .dockerignore  .gitignore  .pylintrc  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  README.rst  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.py
.dependabot/: config.yml
.github/: auto-merge.yml  dependabot.yml
.github/workflows/: pr_automerge.yml  python_publish.yml
cfn_deploy/: __init__.py  cloudformation.py
cfn_sync/: __init__.py  change_set_deployer.py  cli.py  cloudformation.py  cloudformation_stack_deleter.py  cloudformation_stack_deployer.py  deleter.py  direct_deployer.py  stack.py
tests/: conftest.py  demo.yml  stubs.py  test_cli.py  test_cloudformation.py  test_deleter.py  test_direct_deployer.py  test_stack.py
