[project]
name = "cfn-sync"
version = "0.1.0"
description = "Deploy CloudFormation stacks synchronously and watch the events"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.12.0",
]

[dependency-groups]
build = [
    "build>=1.3.0",
]
dev = [
    "black>=25.1.0",
    "boto3-stubs[cloudformation]>=1.40.7",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "setuptools>=80.9.0",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
